# oos

./: .clauderc  .coverage  .env.template  .gitignore  .pre-commit-config.yaml  .relayq_config.json  1PASSWORD_SETUP.md  AGENTIC_DEVELOPMENT.md  AGENTS.md  AI_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_DRIVEN_MODEL_SELECTION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SETUP.md  COMMAND_REFERENCE.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_FINDINGS.md  CURRENT_STATUS.md  DEPLOYMENT.md  DOCUMENTATION_HUB.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  FINAL_COMMAND_REFERENCE.md  FINAL_MODEL_STRATEGY.md  FINAL_VALIDATION_REPORT.md  FREE_MODEL_TEST_PROMPTS.md  GITHUB_PROJECT_TEMPLATE.md  HUMAN_AI_DEVELOPMENT_ETHOS.md  IMPLEMENTATION_READY_GUIDE.md  IMPROVED_DEVELOPMENT_PROCESS.md  INSTALLATION.md  LESSONS_LEARNED.md  LICENSE  MASTER_CHECKLIST.md  MODEL_SELECTION_EXECUTION_GUIDE.md  Makefile  NEW_INTERFACE_SUMMARY.md  (+85 more)
.agent-os/: AGENT.md
.agents/: agents.md
.claude/: auto_patterns.json  commands.json  commands_version.json  mcp_servers.json  project_commands.json  slash-commands.json  slash_commands.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS
.oos/: agentic-workflow-state.json  execution_state.json  tasks.json
.venv_new/: pyvenv.cfg
GUIDES/: DAILY_WORKFLOW.md  EMERGENCY_REFRESHER.md  FIRST_PROJECT.md  QUICK_START.md  TASK_SYSTEM_COMPLETE.md  TASK_SYSTEM_SIMPLE.md  TROUBLESHOOTING_SIMPLE.md  WHAT_IS_OOS.md
OOS_TASK_MEMORY_BUILD/: .claude_code_rules  CONTEXT.md  IMPLEMENTATION_PLAN.md  INITIAL_PROMPT.md  PRD_OOS_TASK_MEMORY.md  README_TRANSFER.md
api/: queue_endpoints.py
chatbot-project/: README.md  main.py
compositions/: README.md  full-dev-setup.sh  pre-commit.sh  start-coding.sh
config/: prompt_templates.json  repository_analyzer_config.json
data/: google_search_config.json  oos.db  oos_config.json  resource_config.json  test_oos.db
diagnostic_logs_20250902_094202/: git_info.txt  system_info.txt
diagnostic_logs_20250902_114203/: env_structure.txt  network_info.txt
docs/: ADVANCED_USAGE_GUIDE.md  AGENT_OS_INTEGRATION.md  AI_COMPREHENSIVE_GUIDE.md  API_REFERENCE.md  ARCHON_INTEGRATION.md  ARCHON_OCI_FIREWALL_FIX.md  BOOTSTRAP_FILE_SAFETY.md  BOOTSTRAP_LAUNCH_READINESS.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  COMPLETE_UX_WORKFLOW.md  COMPLETE_WORKFLOW.md  DEVELOPMENT_PHILOSOPHY.md  ENV_TEMPLATE.md  FAKE_API_KEYS.md  FULL_STACK_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INDUSTRY_SECURITY_STANDARDS.md  INSTALLATION.md  MCP.md  MCP_INTEGRATION_VALIDATION.md  MCP_TROUBLESHOOTING.md  NEW_INTERFACE_SUMMARY.md  ONEPASSWORD.md  OOS_ARCHON_HARMONY.md  OPERATIONS.md  PERSONAL_OPS_VISION.md  V2_VISION.md  (+14 more)
slash-command-consistency-fix/: .gitignore  README.md  pyproject.toml
slash-command-consistency-fix/src/: fix_slash_commands.py
slash-command-consistency-fix/src/slash-command-consistency-fix/: __init__.py  main.py
slash-command-consistency-fix/tests/: __init__.py  test_main.py
(+375 files in other folders)
